--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,9 @@
 ---
 layout: archive
+classes: wide
 ---
 
 {{ content }}
-
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
@@ -15,7 +14,7 @@ layout: archive
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 <div class="entries-{{ entries_layout }}">
   {% for post in posts %}
-    {% include archive-single.html type=entries_layout %}
+    {% include archive-single.html type="grid" %}
   {% endfor %}
 </div>
 
