--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,9 @@
 {% if page.author_profile or layout.author_profile or page.sidebar %}
   <div class="sidebar sticky">
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
-  {% if page.sidebar %}
+  {% if page.toc_left %}
+    {% include toc_left.html nav=page.toc_left %}
+  {% elsif page.sidebar %}
     {% for s in page.sidebar %}
       {% if s.image %}
         <img src="{{ s.image | relative_url }}"
