--- a/_sass/minimal-mistakes/_tables.scss
+++ b/_sass/minimal-mistakes/_tables.scss
@@ -2,14 +2,14 @@
    TABLES
    ========================================================================== */
 
+/* original table style
+
 table {
-  display: block;
   margin-bottom: 1em;
   width: 100%;
   font-family: $global-font-family;
   font-size: $type-size-6;
   border-collapse: collapse;
-  overflow-x: auto;
 
   & + table {
     margin-top: 1em;
@@ -17,8 +17,8 @@ table {
 }
 
 thead {
-  background-color: $border-color;
-  border-bottom: 2px solid mix(#000, $border-color, 25%);
+  background-color: $lighter-gray;
+  border-bottom: 2px solid $light-gray;
 }
 
 th {
@@ -29,7 +29,7 @@ th {
 
 td {
   padding: 0.5em;
-  border-bottom: 1px solid mix(#000, $border-color, 25%);
+  border-bottom: 1px solid $light-gray;
 }
 
 tr,
@@ -37,3 +37,77 @@ td,
 th {
   vertical-align: middle;
 }
+
+*/
+
+/* ==================
+   Tufte booktab style 
+  
+   from http://clayh53.github.io/tufte-jekyll/articles/15/tufte-style-jekyll-blog 
+  
+   =================== */
+
+table, table.booktabs { 
+  width: auto;  //making booktabs style tables the unstyled default in case someone uses Markdown styling
+  margin: 0 auto; 
+  margin-bottom: 1em; 
+  border-spacing: 0px;
+  border-top: 2px solid #333333;
+  border-bottom: 2px solid #333333;
+  & + table {
+    margin-top: 1em;
+  }
+}
+
+/* Default values for table heads and cells for non-booktabs */
+th, td{ font-size: 0.95em; 
+        line-height: 1.2;  }
+
+/* Default captions for non-booktabs tables */
+.table-caption { float:right;
+                 clear:right;
+                 margin-right: -60%;
+                 width: 50%;
+                 margin-top: 0;
+                 margin-bottom: 0;
+                 font-size: 1.0rem;
+                 line-height: 1.96; }
+                 
+/* Table heads */
+.booktabs th, th { border-bottom: 1px solid #333333;
+                   padding: 0.65ex 0.5em 0.4ex 0.5em;
+                   font-weight: 500;
+                   font-family: $global-font-family;
+                   font-size: 0.95em;
+}
+
+.booktabs th.cmid, th { border-bottom: 1px solid lighten(#333333, 25%); }
+
+.booktabs th.nocmid { border-bottom: none; }
+
+.booktabs tbody tr:first-child td,  tr:first-child td { padding-top: 0.65ex; } /* add space between thead row and tbody */
+
+/* Table cells */
+.booktabs td, td {  padding-bottom: 0.1em;
+                    padding-left: 0.5em;
+                    padding-right: 0.5em;
+                    font-family: $global-font-family;
+                    font-size: 0.875em; }
+
+.booktabs caption, caption { font-size: 90%;
+                             text-align: left;
+                             width: auto;
+                             margin-left: auto;
+                             margin-right: auto;
+                             margin-top: 1ex;
+                             caption-side: top; }
+
+/* Alignment of table heads */
+.booktabs th.l { text-align: left !important; }
+.booktabs th.c { text-align: center !important; }
+.booktabs th.r { text-align: right !important; }
+
+/* Alignment of cells */
+.booktabs tbody tr td.l { text-align: left !important; }
+.booktabs tbody tr td.c { text-align: center !important; }
+.booktabs tbody tr td.r { text-align: right !important; }
